fixed footer in about section to make it less disturbing while on mobile

--- a/about.css
+++ b/about.css
@@ -63,7 +63,8 @@
     /* centers text */
     background: #ddd;
     /* grey background */
-    position: sticky;
+    position: fixed;
+    right: 0;
     left: 0;
     bottom: 0;
     width: 100%;
